--- a/Productos.html
+++ b/Productos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="SapuCafe provee distintos productos de cafe en granos y molido.">
-    <meta name="keywords" content="#">
+    <meta name="keywords" content="cafe, cafeteria, cafe en granos, cafe molido, cafeteria, coofee shop, desayuno">
     <link rel= "shortcut icon" href="../Varios/favicon_io/favicon-16x16.png">
     <title>SapuCafe - Coofee shop - Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -20,7 +20,7 @@
                     <ul>
                         <li><a href="#"> Item 1</a></li>
                         <li><a href="#"> Item 2</a></li>
-                    </ul>    
+                    </ul>   
                 </li>
                 <li><a href="./AboutUs.html">Nosotros</a></li>
                 <li><a href="./Productos.html">Productos</a></li>
